video/ovenplayer/ovenplayer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ovenplayerdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ovenplayerdemo
  template:
    metadata:
      labels:
        app: ovenplayerdemo
    spec:
      containers:
      - name: ovenplayerdemo
        image: docker.io/airensoft/ovenplayerdemo:1.0.0
        ports:
          - name: http
            containerPort: 80
        resources:
          requests:
            memory: 5Mi
          limits:
            memory: 7Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ovenplayerdemo
spec:
  selector:
    app: ovenplayerdemo
  ports:
  - name: http
    port: 80
